<resources>
    <string name="app_name">جمعية نادي  المنتدى الرياضي</string>
    <string name="Full_Name">الإسم بالكامل</string>
    <string name="Email">البريد الإلكتروني</string>
    <string name="Sport_Type">نوع الرياضة</string>
    <string name="Local_Address">عنوان السكن</string>
    <string name="Assurance">التأمين</string>
    <string name="Date_Sing">تاريخ التسجيل</string>
    <string name="Date_Burn">تاريخ الإزدياد</string>
    <string name="tic_picture">إختر صورة</string>
    <string name="add_persent">إضافة تلميذ</string>
    <string name="listof_persent">قائمة التلاميذ</string>

</resources>