<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="SpUsage"
                android:padding="16dp" >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Full_Name"
                android:layout_marginBottom="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/baseline_create_24"
                app:startIconTint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:fontFamily="@font/zelda"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_sizeble"
                    android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:layout_marginBottom="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_sizeble"
                    android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Sport_Type"
                android:layout_marginBottom="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/baseline_sports_martial_arts_24"
                app:startIconTint="@color/black" >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edttype"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:fontFamily="@font/zelda"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_sizeble"
                    android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Local_Address"
                android:layout_marginBottom="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/baseline_add_location_24"
                app:startIconTint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/zelda"
                android:textStyle="bold"
                android:textSize="@dimen/text_sizeble"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Assurance"
                android:layout_marginBottom="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/baseline_assured_workload_24"
                app:startIconTint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtassurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:fontFamily="@font/zelda"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_sizeble"
                    android:textColor="@color/black"
            />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Date_Sing"
        android:layout_marginBottom="20dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/baseline_access_time_24"
        app:startIconTint="@color/black">
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtdate_sing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textStyle="bold"
            android:textSize="@dimen/text_sizeble"
            android:textColor="@color/black"/>
</com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Date_Burn"
        android:layout_marginBottom="20dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/baseline_date_range_24"
        app:startIconTint="@color/black">
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtdate_burn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="@dimen/text_sizeble"
            android:textColor="@color/black"/>
</com.google.android.material.textfield.TextInputLayout>
<androidx.cardview.widget.CardView
        android:id="@+id/cvStories"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="80dp">
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/ic_launcher_foreground"/>
</androidx.cardview.widget.CardView>


        <Button
                android:id="@+id/btnChoose"
                android:text="@string/tic_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" tools:ignore="RtlHardcoded"/>

        <Button
                android:id="@+id/btnAdd"
                android:text="@string/add_persent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

        <Button
                android:id="@+id/btnList"
                android:text="@string/listof_persent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

             />
    </LinearLayout>




</ScrollView>